--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0"
   },
-  "description": "Express Generator Demo",
+  "description": "MongoDB Demo",
   "main": "server.js",
   "author": "Hinal Soni",
   "license": "ISC",
